[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luminus-py"
version = "0.2.0"
description = "Notebook-friendly Python client for luminus-mcp"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Keith So" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
notebook = ["pandas>=2.0"]
gis = ["geopandas>=0.14"]
all = ["pandas>=2.0", "geopandas>=0.14"]

[tool.setuptools.packages.find]
include = ["luminus*"]
