[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luminus-py"
version = "0.2.2"
description = "Notebook-friendly Python client for luminus-mcp"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Keith So" }]
license = "MIT"
keywords = ["mcp", "jupyter", "notebook", "energy", "electricity", "gis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
notebook = ["pandas>=2.0"]
gis = ["geopandas>=0.14"]
all = ["pandas>=2.0", "geopandas>=0.14"]

[project.urls]
Homepage = "https://github.com/kitfunso/luminus"
Repository = "https://github.com/kitfunso/luminus"
Issues = "https://github.com/kitfunso/luminus/issues"
Changelog = "https://github.com/kitfunso/luminus/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["luminus*"]
